pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-release-0-5
  labels:
    app: webapp
    release: "0-5"
spec:
  containers:
  - name: webapp
    image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5
---
apiVersion: v1
kind: Pod
metadata:
  name: fleetman-queue
  labels:
    app: queue
spec:
  containers:
  - name: fleetman-queue
    image: richardchesterwood/k8s-fleetman-queue:release1
