resourcetesting.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
spec:
  selector:
    matchLabels:
      app: queue
  replicas: 2
  template: # template for the pods
    metadata:
      labels:
        app: queue
    spec:
      containers:
      - name: queue
        image: richardchesterwood/k8s-fleetman-queue:release2
        resources:
          requests: #hints to the scheduler
            memory: "300Mi"
            cpu: 100m
          limits:
            memory: "500Mi"
            cpu: "200m"
