services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp
spec:
  selector:
    app: webapp
    release: "0-5"
  ports:
    - name: http
      port: 80
      targetPort: 80 #container port
      nodePort: 30080 # Node Port > 30000
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-queue
spec:
  selector:
    app: queue
  ports:
    - name: http
      port: 8161
      targetPort: 8161 #container port
      nodePort: 30010 # Node Port > 30000
  type: NodePort
