ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-routing
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: fleetman.com
    http:
      paths:
      - path: /
        backend:
          serviceName: fleetman-webapp
          servicePort: 80
